--- a/Qrganize/options.html
+++ b/Qrganize/options.html
@@ -20,7 +20,7 @@
                     <label for="detail-medium">摘要詳細程度:</label>
                     <div class="radio-group">
                         <label><input type="radio" name="detail" value="low" id="detail-low"> 精簡</label>
-                        <label><input type="radio" name="detail" value="medium" id="detail-medium"> 中等</label>
+                        <label><input type="radio" name="detail" value="medium" id="detail-medium" checked> 中等</label>
                         <label><input type="radio" name="detail" value="high" id="detail-high"> 詳細</label>
                     </div>
                 </div>
@@ -28,21 +28,20 @@
                 <div class="form-group">
                     <label for="apiUrl">Ollama API 位址:</label>
                     <input type="text" id="apiUrl" name="apiUrl" placeholder="例如: http://localhost:11434/api">
-                    <p class="input-hint">請填寫您的本地 Ollama 服務 API 的基底網址 (通常以 `/api` 結尾，例如 `http://主機IP:端口號/api`)。</p>
+                    <p class="input-hint">請填寫您的本地 Ollama 服務 API 的基底網址 (通常以 `/api` 結尾)。</p>
                 </div>
 
                 <div class="form-group">
                     <label for="model">AI 模型名稱:</label>
                     <input type="text" id="model" name="model" placeholder="例如: qwen2:7b-instruct">
-                    <p class="input-hint">請填寫您希望在 Ollama 中使用的模型名稱 (需已在本地下載，如 `ollama pull model_name`)。</p>
+                    <p class="input-hint">請填寫您希望在 Ollama 中使用的模型名稱 (需已在本地下載)。</p>
                 </div>
 
                 <div class="form-group">
                     <label for="outputLanguage">AI 輸出語言:</label>
                     <input type="text" id="outputLanguage" name="outputLanguage" placeholder="例如: 繁體中文, English, 日本語">
-                    <p class="input-hint">指定 AI 回應內容的目標語言。請使用該語言的標準名稱（例如 "繁體中文", "English", "日本語"）。</p>
+                    <p class="input-hint">指定 AI 回應內容的目標語言。</p>
                 </div>
-
                 <div class="form-group">
                     <label for="font-small">側邊欄字體大小:</label>
                     <div class="radio-group">
@@ -57,6 +56,12 @@
                     <label for="panelWidth">側邊欄預設寬度 (像素):</label>
                     <input type="number" id="panelWidth" name="panelWidth" min="320" max="800" step="10">
                     <p class="input-hint">側邊欄開啟時的寬度，建議範圍 320px - 800px。</p>
+                </div>
+
+                <div class="form-group">
+                    <label for="aiTimeout">AI請求超時時間 (秒):</label>
+                    <input type="number" id="aiTimeout" name="aiTimeout" min="5" step="1" placeholder="例如: 120">
+                    <p class="input-hint">向 Ollama AI 發送請求的等待超時時間 (單位：秒)。預設 120 秒。設定過短可能導致複雜請求因處理不及而失敗。</p>
                 </div>
 
                 <div class="form-group switch-group">
@@ -97,10 +102,11 @@
                     <li><strong>選取文字即時摘要：</strong> 在網頁上選取任意文字片段，透過右鍵選單或擴充功能圖示，即可對選定範圍進行快速摘要。</li>
                     <li><strong>摘要內容限制：</strong> AI 被引導專注於原始文本中明確提到的信息，避免過度延伸，並根據原文長短調整摘要篇幅。</li>
                     <li><strong>原始文章查閱：</strong> 摘要生成後，您可以在摘要卡片下方找到「<span class="toggle-icon-example">▼</span> 原始文章內容」的按鈕（**預設為收合狀態**），點擊即可展開或收合由擴充功能擷取的網頁原文，方便對照參考。</li>
+                    <li><strong>AI請求超時設定：</strong> 您可以在設定頁面調整向 AI 發送請求的等待超時時間 (單位：秒)。</li>
                     <li><strong>除錯與重試輔助：</strong> 當在設定中開啟「顯示詳細錯誤訊息」時：
                         <ul>
                             <li>摘要面板會額外提供「複製摘要Prompt」、「複製原始回應」及「複製原始內容」按鈕。</li>
-                            <li>若 AI 呼叫（摘要或問答）失敗，會在錯誤訊息旁提供「重試」按鈕。</li>
+                            <li>若主要 AI 摘要呼叫失敗，會在錯誤訊息旁提供「重試」按鈕。</li>
                         </ul>
                     </li>
                 </ul>
@@ -114,7 +120,8 @@
                     <li><strong>Markdown 格式回答：</strong> AI 會使用 Markdown 語法（例如各級標題、項目符號列表等）來排版其回答，經處理後以豐富格式呈現，提升可讀性。問答中若引用上下文，也會以特殊樣式呈現。</li>
                     <li><strong>對話歷史保留：</strong> 問答記錄會顯示在側邊欄中，方便回顧。</li>
                     <li><strong>統一滾動體驗：</strong> 摘要內容與整個 Q&A 區塊（包含歷史記錄和輸入框）均在同一個可滾動區域內，操作流暢。</li>
-                    <li><strong>問答錯誤重試：</strong> 若問答過程中 AI 回應失敗，且「顯示詳細錯誤訊息」已開啟，對應的問答條目旁會出現「重試」按鈕。</li>
+                    <li><strong>問答錯誤重試：</strong> 若問答過程中 AI 回應失敗，且「顯示詳細錯誤訊息」已開啟，對應的問答條目旁會出現「重試」按鈕，點擊可重新針對該問題提問。</li>
+                    <li><strong>除錯輔助：</strong> 當「顯示詳細錯誤訊息」開啟時，每個問答條目的AI回答下方會額外提供「複製Prompt」和「複製AI原始回應」按鈕，方便複製用於該問答的完整提示語及AI未經處理的原始輸出。</li>
                 </ul>
             </div>
 
@@ -150,6 +157,7 @@
                     <li>AI 輸出內容的語言 (例如：繁體中文、English)。</li>
                     <li>側邊摘要面板的預設字體大小 (小/中/大，中為標準)。</li>
                     <li>側邊摘要面板的預設寬度。</li>
+                    <li>AI 請求的超時時間（單位：秒）。</li>
                     <li>是否在發生錯誤時顯示更詳細的技術訊息（並啟用除錯及重試按鈕）。</li>
                 </ul>
             </div>
@@ -159,16 +167,18 @@
                 <ul>
                     <li><strong>本地 Ollama 環境：</strong> 您必須已在您的電腦上成功安裝並運行 Ollama 服務。</li>
                     <li><strong>AI 模型準備：</strong> 請確保在「AI 模型名稱」設定中指定的模型，已經透過 Ollama 指令 (如 `ollama pull your_model_name`) 下載至您的本地 Ollama 環境中。</li>
-                    <li><strong>API 連線：</strong> 擴充功能需要能夠成功連線到您所設定的「Ollama API 位址」。</li>
+                    <li><strong>API 連線：</strong> 擴充功能需要能夠成功連線到您所設定的「Ollama API 位址」。 同時，背景服務會定期 (每20秒) ping Ollama API 的 `/api/tags` 端點以嘗試保持連線。</li>
                     <li><strong>UTF-8 編碼：</strong> 為確保最佳相容性與顯示效果，建議您的作業系統、瀏覽器以及所瀏覽的網頁均優先使用 UTF-8 編碼。本擴充功能所有相關檔案（HTML, CSS, JS）均使用 UTF-8 編碼儲存。</li>
                     <li><strong>內容擷取限制：</strong> 對於結構極端複雜或大量依賴 JavaScript 動態載入內容的網頁，主要內文的擷取效果可能會受到一定限制。</li>
+                    <li><strong>超時設定：</strong> 若經常遇到 504 Gateway Time-out 錯誤，除了檢查 Ollama 服務效能，也可嘗試在此設定頁面中適當增加「AI請求超時時間」。但請注意，前端超時無法解決後端伺服器 (如 Nginx) 本身的超時問題。</li>
                 </ul>
             </div>
         </section>
     </main>
 
     <footer>
-        <p>Ollama 本地 AI 網頁重點摘要 v1.8 (錯誤處理與UI優化)</p> </footer>
+        <p>Ollama 本地 AI 網頁重點摘要 v1.7 (設定與UI調整、程式碼重構)</p>
+    </footer>
 </div>
 <script src="options.js"></script>
 </body>
