--- a/Qrganize/options.html
+++ b/Qrganize/options.html
@@ -9,7 +9,7 @@
 <body>
 <div class="container">
     <header>
-        <h1>Ollama 本地 AI 網頁重點摘要 - 設定與說明</h1>
+        <h1>Ollama 網頁重點摘要 - 設定與說明</h1>
     </header>
 
     <main>
@@ -87,6 +87,7 @@
             <h2><span class="icon">💡</span> 功能說明 (Features & Usage)</h2>
 
             <div class="help-category">
+                <h3>GitHub：<a href="https://github.com/darionnnnnn/Organize">Organize</a></h3>
                 <h3>一、核心摘要功能</h3>
                 <ul>
                     <li><strong>自動內文擷取：</strong> 智慧識別並提取網頁主要閱讀內容，過濾廣告、導航等干擾元素。</li>
